Fixed center aligning for slide content

--- a/src/slides/diagram/style.css
+++ b/src/slides/diagram/style.css
@@ -4,6 +4,7 @@
   grid-column-gap: 40px;
   align-items: center;
   height: 100%;
+  width: 100%;
   padding: 29px 42px;
   box-sizing: border-box;
 }
